# greeshmapython

./: Jenkinsfile  calculator.py  pyproject.toml  test_calculator.py
